修正概要: opengrok-serverロールの reindex 安定化 ( mirror無効化, Git safe.directory対応, Java module補完)のために修正を実施
- OpenGrokコンテナの自動ミラー同期を NOMIRROR=1 で常時無効化
- reindex 時の dubious ownership 回避のため, Git system config 配布を追加
- /etc/gitconfig を read-only でコンテナに mount する設定を追加
- Java 21 で suggester(ChronicleMap)が必要とする module オプションを JAVA_OPTS に追加
- Readme を実装内容に合わせて更新(変数, テンプレート, 動作説明, 運用手順)